--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
 		<p>Esta é a minha página pessoal de apresentação dos conteúdos
 			estudados na Disciplina de Programação I, ano 2023-1
 		</p>
+		<p>
+			Olá!
+		</p>
 	</body>
 </html>
