--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<p>Esta é a minha página pessoal de apresentação dos conteúdos
 			estudados na Disciplina de Programação I, ano 2023-1
 		</p>
+		<p><img src="Zed_2.jpg" alt="Zed Dizimador de Galáxias"></p>
 		<p>
 			<h1>Olá!</h1>
 			<h2>Hello!</h2>
