alterei o tamanho da imagem

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<p>Esta é a minha página pessoal de apresentação dos conteúdos
 			estudados na Disciplina de Programação I, ano 2023-1
 		</p>
-		<p><img src="Zed_2.jpg" alt="Zed Dizimador de Galáxias" height="400px" width="400px"></p>
+		<p><img src="Zed_2.jpg" alt="Zed Dizimador de Galáxias" width="400px" height="650px"></p>
 		<p>
 			<h1>Olá!</h1>
 			<h2>Hello!</h2>
