--- a/exemplos/tabelas.html
+++ b/exemplos/tabelas.html
@@ -16,9 +16,10 @@
             <tr><td> Mickey </td><td> 35 </td></tr>
             <tr><td> Pateta </td><td> 25 </td></tr>
             <tr><td> Zed </td>
-                <td><img src="Zed_2.jpg" alt="zed" width="300" height="200"> </td></tr>
+                <td><img src="../imagens/Zed_2.jpg" alt="zed" width="300" height="200"> </td></tr>
         </tbody>
     </table>
+    <p><a href="../index.html">Voltar para o página principal</a></p>
 <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>-->
 </body>
 </html>
