--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+		<!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">-->
 		<title>Página de teste Josenilton</title>
 	</head>
 	<body>
@@ -14,12 +14,14 @@
 		<p>Esta é a minha página pessoal de apresentação dos conteúdos
 			estudados na Disciplina de Programação I, ano 2023-1
 		</p>
-		<p><img src="Zed_2.jpg" alt="Zed Dizimador de Galáxias" width="813" height="480"></p>
+		<p><img src="imagens/Zed_2.jpg" alt="Zed Dizimador de Galáxias" width="813" height="480"></p>
 		<p>
 			<h1>Olá!</h1>
 			<h2>Hello!</h2>
 			<h3>Seja Bem-Vindo!</h3>
+			<h2>Aula de tabelas</h2>
+			<p><a href="exemplos/tabelas.html"> Cliqui aqui para acessar a tabela </a></p>
 		</p>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+		<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>-->
 	</body>
 </html>
