--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 		<p><img src="imagens/Zed_2.jpg" alt="Zed Dizimador de Galáxias" width="813" height="480"></p>
 		<p>
 			<h2>Aula de tabelas</h2>
-			<p><a href="exemplos/tabelas.html"> Cliqui aqui para acessar a tabela </a></p>
+			<p><a href="exemplos/tabelas.html">Ir para a tabela</a></p>
+			<h2>Formulário</h2>
+			<p><a href="formularios/formularios.html">Ir para formulário</a></p>
 		</p>
 		<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>-->
 	</body>
