--- a/formularios/formularios.html
+++ b/formularios/formularios.html
@@ -80,7 +80,9 @@
                 <textarea row="6" style="width: 26em;" id="experiencia" name="experiencia"></textarea>
             </div>
 
-            <button class="botao" type="submit"><strong>Concluído</strong></button>
+            <button class="button" type="submit"><strong>Concluído</strong></button>
+            <!--<form action="../index.html"><input type="submit" value="Voltar" /></form>-->
+            <button class="button2" type="submit"><strong><a href="../index.html">Voltar</a></strong></button>
         </form>
     </body>
 </html>
