--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">-->
-		<link rel="stylesheet" href="estilos.css">
+		<link rel="stylesheet" href="CSS/estilos.css">
 		<title>Página de teste Josenilton</title>
 	</head>
 	<body>
@@ -18,10 +17,9 @@
 		<p><img src="imagens/Zed_2.jpg" alt="Zed Dizimador de Galáxias" width="813" height="480"></p>
 		<p>
 			<h2>Aula de tabelas</h2>
-			<p><a href="exemplos/tabelas.html">Ir para a tabela</a></p>
+			<p><a href="tabelas/tabelas.html">Ir para a tabela</a></p>
 			<h2>Formulário</h2>
 			<p><a href="formularios/formularios.html">Ir para formulário</a></p>
 		</p>
-		<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>-->
 	</body>
 </html>
