--- a/tabelas/tabelas.html
+++ b/tabelas/tabelas.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">-->
-    <link rel="stylesheet" href="../estilos.css">
+    <link rel="stylesheet" href="../CSS/estilos.css">
     <title>Exemplo de Tabelas html</title>
 </head>
 <body>
@@ -20,7 +19,6 @@
                 <td><img src="../imagens/Zed_2.jpg" alt="zed" width="300" height="200"> </td></tr>
         </tbody>
     </table>
-    <p><a href="../index.html">Página inicial</a></p>
-<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>-->
+    <form><button class="button2" type="submit"><strong><a href="../index.html">Voltar</a></strong></button></form>
 </body>
 </html>
