--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<p>Esta é a minha página pessoal de apresentação dos conteúdos
 			estudados na Disciplina de Programação I, ano 2023-1
 		</p>
-		<p><img src="imagens/Zed_2.jpg" alt="Zed Dizimador de Galáxias" width="813" height="480"></p>
+		<p><img src="imagens/Zed_2.jpg" title="Zed Dizimador de Galáxias" alt="Zed Dizimador de Galáxias" width="813" height="480"></p>
 		<p>
 			<h2>Aula de tabelas</h2>
 			<p><a href="tabelas/tabelas.html">Ir para a tabela</a></p>
