Adicionei uma nova tabela

--- a/tabelas/tabela2.html
+++ b/tabelas/tabela2.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="../CSS/estilos.css">
     <title>Exemplo 2 Tabela</title>
 </head>
 <body>
-    <h2>Tabela de Produtos</h2>    
+    <h2>Tabela de Produtos</h2>
+    <table border="1">
+        <thead>
+            <tr>
+                <th colspan="4">Ilustrações</th>
+            </tr>
+            <tr>
+                <th rowspan="2">Produto</th>
+                <th rowspan="3">Valor Médio</th>
+            </tr>
+            <tr>
+                <th>Capa</th>
+                <th>Página Simples</th>
+                <th>Vinheta</th>
+            </tr>
+        </thead>
+    </table>
 </body>
 </html>
