--- a/tabelas/tabela2.html
+++ b/tabelas/tabela2.html
@@ -16,7 +16,7 @@
             </tr>
             <tr>
                 <th rowspan="2">Produto</th>
-                <th rowspan="3">Valor Médio</th>
+                <th colspan="3">Valor Médio</th>
             </tr>
             <tr>
                 <th>Capa</th>
@@ -24,6 +24,25 @@
                 <th>Vinheta</th>
             </tr>
         </thead>
+        <tbody>
+            <tr>
+                <td>Cartilhas e Manuais</td>
+                <td>1.500</td>
+                <td>1.000</td>
+                <td>250</td>
+            </tr>
+            <tr>
+                <td>Jornal</td>
+                <td>2.500</td>
+                <td>900</td>
+                <td>250</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+            <td colspan="4">Ariquemes Serviços</td>
+            </tr>
+        </tfoot>
     </table>
 </body>
 </html>
