--- a/tabelas/tabela2.html
+++ b/tabelas/tabela2.html
@@ -44,5 +44,6 @@
             </tr>
         </tfoot>
     </table>
+    <form><button class="button2" type="submit"><strong><a href="../index.html">Voltar</a></strong></button></form>
 </body>
 </html>
