--- a/tabelas/tabela2.html
+++ b/tabelas/tabela2.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h2>Tabela de Produtos</h2>
-    <table border="1">
+    <table class="tabela2" border="1" style="width:100%">
         <thead>
             <tr>
                 <th colspan="4">Ilustrações</th>
