--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 			<p><a href="tabelas/tabela2.html">Ir para a tabela 2</a></p>
 			<h2>Formulário</h2>
 			<p><a href="formularios/formularios.html">Ir para formulário</a></p>
+			<h2>Listas de Definições</h2>
+			<p><a href="Listas/lista1.html">Ir para a Lista</a></p>
 		</p>
 	</body>
 </html>
