--- a/Listas/lista1.html
+++ b/Listas/lista1.html
@@ -4,9 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="../CSS/estilos.css">
+    <title>Aula Lista de Definições</title>
 </head>
 <body>
-    
+    <h1>Lista não ordenada</h1>
+    <ul>
+        <li>Bola</li>
+        <li>Carrinho</li>
+        <li>Boneca</li>
+        <li>Iô-Iô</li>
+        <li>Bolinha de gude</li>
+        <li>Peteca</li>
+    </ul>
+    <h1>Lista Ordenada</h1>
+    <ol>
+        <li>Arroz</li>
+        <li>Feijão</li>
+        <li>Farinha</li>
+        <li>Carne</li>
+        <li>Verduras
+            <ol style="list-style-type: lower-alpha;">
+                <li>Alface</li>
+                <li>Tomate</li>
+                <li>Batatinha</li>
+            </ol>
+        </li>
+        <li>Leite</li>
+    </ol>
+
+
+
+    <h1>Lista de Definições</h1>
+
+    <h2>Medicamentos</h2>
+    <dl>
+        <dt>Dipirona</dt>
+            <dd>Analgésico e anti-térmico</dd>
+        <dt>Hidróxido de Alumínio</dt>
+            <dd>Anti ácido</dd>
+    </dl>
+    <p>&nbsp;</p>
+    <p><form><button class="button2" type="submit"><strong><a href="../index.html">Voltar</a></strong></button></form></p>
 </body>
 </html>
