--- a/Listas/lista1.html
+++ b/Listas/lista1.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Lista não ordenada</h1>
+    <p>&nbsp;</p>
     <ul>
         <li>Bola</li>
         <li>Carrinho</li>
@@ -17,7 +18,9 @@
         <li>Bolinha de gude</li>
         <li>Peteca</li>
     </ul>
+    <p>&nbsp;</p>
     <h1>Lista Ordenada</h1>
+    <p>&nbsp;</p>
     <ol>
         <li>Arroz</li>
         <li>Feijão</li>
@@ -32,12 +35,11 @@
         </li>
         <li>Leite</li>
     </ol>
-
-
-
+    <p>&nbsp;</p>
     <h1>Lista de Definições</h1>
-
+    <p>&nbsp;</p>
     <h2>Medicamentos</h2>
+    <p>&nbsp;</p>
     <dl>
         <dt>Dipirona</dt>
             <dd>Analgésico e anti-térmico</dd>
