--- a/Listas/lista1.html
+++ b/Listas/lista1.html
@@ -25,7 +25,7 @@
         <li>Farinha</li>
         <li>Carne</li>
         <li>Verduras
-            <ol style="list-style-type: lower-alpha;">
+            <ol style="list-style-type:'+';">
                 <li>Alface</li>
                 <li>Tomate</li>
                 <li>Batatinha</li>
