--- a/tabelas/tabela2.html
+++ b/tabelas/tabela2.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../CSS/estilos.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/tabela2.css">
     <title>Exemplo 2 Tabela</title>
 </head>
 <body>
     <h2>Tabela de Produtos</h2>
-    <table class="tabela2" border="1" style="width:100%">
+    <table class="tabela2" border="1" style="width:50%">
         <thead>
             <tr>
                 <th colspan="4">Ilustrações</th>
