adicionado ao index

--- a/atividades/ariquemes.html
+++ b/atividades/ariquemes.html
@@ -162,5 +162,6 @@
             <li>Parque Botânico Municipal</li>
             <li>Praça da Bíblia</li>
         </ol>
+        <p><form><button class="button2" type="submit"><strong><a href="../index.html">Voltar</a></strong></button></form></p>
     </body>
 </html>
