--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 			<p><a href="formularios/formularios.html">Ir para formulário</a></p>
 			<h2>Listas de Definições</h2>
 			<p><a href="Listas/lista1.html">Ir para a Lista</a></p>
+			<h2>ATIVIDADES</h2>
+			<a href="atividades/ariquemes.html">Ir para atividades</a>
 		</p>
 	</body>
 </html>
