--- a/atividades/ariquemes.html
+++ b/atividades/ariquemes.html
@@ -18,7 +18,7 @@
         }
         #paragrafo{
             text-align: justify;
-            margin-right: 27%;
+            margin-right: 66%;
         }
         #tabela_titulo{
             text-align:center;
@@ -41,13 +41,13 @@
         </p>
         <img src="Brasao_Ariquemes.jpg" title="Braão de Ariquemes" alt="Brasão de Ariquemes">
         <p>&nbsp;</p>
-        <table border="1" style="width:75%; text-align:center" >
+        <table border="1" style="width:35%; text-align:center" >
             <tbody>
                 <tr>
                     <th id="tabela_titulo" colspan="14">Dados Climatológicos para Ariquemes</th>
                 </tr>
                 <tr>
-                    <th>Mês</th>
+                    <th colspan="1">Mês</th>
                     <th class="mes">Jan</th>
                     <th class="mes">Fev</th>
                     <th class="mes">Mar</th>
@@ -63,7 +63,7 @@
                     <th class="mes">Anual</th>
                 </tr>
                 <tr>
-                    <th>Temperatura máxima média (°C)</th>
+                    <th colspan="1">Temperatura máxima média (°C)</th>
                     <td style="background: #FF4D00;">30,3</td>
                     <td style="background: #FF4F00;">29,9</td>
                     <td style="background: #FF5000;">29,8</td>
@@ -79,7 +79,7 @@
                     <td style="background: #FF4700;">31,1</td>
                 </tr>
                 <tr>
-                    <th>Temperatura média (°C)</th>
+                    <th colspan="1">Temperatura média (°C)</th>
                     <td style="background: #FF7000;">25,2</td>
                     <td style="background: #FF6E00;">25,4</td>
                     <td style="background: #FF6F00;">25,3</td>
@@ -95,7 +95,7 @@
                     <td style="background: #FF6E00;">25,4</td>
                 </tr>
                 <tr>
-                    <th>Temperatura mínima média (°C)</th>
+                    <th colspan="1">Temperatura mínima média (°C)</th>
                     <td style="background: #FF9226;">20,2</td>
                     <td style="background: #FF8D1C;">20,9</td>
                     <td style="background: #FF8D1C;">20,9</td>
@@ -111,7 +111,7 @@
                     <td style="background: #FF952C;">19,8</td>
                 </tr>
                 <tr>
-                    <th>Precipitação (mm)</th>
+                    <th colspan="1">Precipitação (mm)</th>
                     <td style="background: #000031; color: #FFFFFF;">331</td>
                     <td style="background: #000031; color: #FFFFFF;">324</td>
                     <td style="background: #000031; color: #FFFFFF;">313</td>
@@ -129,7 +129,7 @@
             </tbody>
         </table>
         <p>&nbsp;</p>
-        <h1 style="border-bottom:2px solid gray; width:75%;">Bairros</h1>
+        <h1 style="border-bottom:2px solid gray; width:35%;">Bairros</h1>
         <h3>Zona Norte</h3>
         <ul>
             <li>Jardim Monte Alegre</li>
@@ -148,7 +148,7 @@
             <li>Pólo Moveleiro</li>
         </ul>
         <p>&nbsp;</p>
-        <h1 style="border-bottom:2px solid gray; width:75%;">Praças e parques</h1>
+        <h1 style="border-bottom:2px solid gray; width:35%;">Praças e parques</h1>
         <ol style="list-style-type: lower-alpha;">
             <li>Praça do Açaí - Setor 02</li>
             <li>Praça da Vitória - Setor 01</li>
