--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="CSS/estilos.css">
 		<title>Página de teste Josenilton</title>
+		<link rel="icon" type="image/x-icon" href="/imagens/icon.ico">
 	</head>
 	<body>
 		<h2>Disciplina de Programação I - IFRO Campus Ariquemes</h2>
