--- a/tabelas/tabelas.html
+++ b/tabelas/tabelas.html
@@ -16,7 +16,7 @@
             <tr><td> Mickey </td><td> 35 </td></tr>
             <tr><td> Pateta </td><td> 25 </td></tr>
             <tr><td> Zed </td>
-                <td><img src="../imagens/Zed_2.jpg" alt="zed" width="300" height="200"> </td></tr>
+                <td><img src="../midias/imagens/Zed_2.jpg" alt="zed" width="300" height="200"> </td></tr>
         </tbody>
     </table>
     <form><button class="button2" type="submit"><strong><a href="../index.html">Voltar</a></strong></button></form>
