--- a/atividades/ariquemes.html
+++ b/atividades/ariquemes.html
@@ -41,7 +41,7 @@
         </p>
         <img src="Brasao_Ariquemes.jpg" title="Braão de Ariquemes" alt="Brasão de Ariquemes">
         <p>&nbsp;</p>
-        <table border="1" style="width:35%; text-align:center" >
+        <table border="1" style="background-color: rgb(222, 222, 222); width:35%; text-align:center" >
             <tbody>
                 <tr>
                     <th id="tabela_titulo" colspan="14">Dados Climatológicos para Ariquemes</th>
