--- a/midias/midias.html
+++ b/midias/midias.html
@@ -8,13 +8,13 @@
     </head>
     <body>
         <h1>Áudio em HTML</h1>
-        <audio controls autoplay muted>
+        <audio controls autoplay muted loop>
             <source src="../midias/audios/minato.mp4" type="audio/mpeg">
         </audio>
-        <video controls autoplay muted>
+        <video controls autoplay muted loop>
             <source src="../midias/videos/minato.mp4" type="video/mp4">
         </video>
-        <video controls autoplay muted>
+        <video controls autoplay muted loop>
             <source src="../midias/videos/madara.mp4" type="video/mp4">
         </video>
     </body>
