--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="CSS/estilos.css">
 		<title>Página de teste Josenilton</title>
-		<link rel="icon" type="image/x-icon" href="/midias/imagens/icon.ico">
+		<link rel="icon" type="image/x-icon" href="midias/imagens/icon.ico">
 	</head>
 	<body>
 		<h2>Disciplina de Programação I - IFRO Campus Ariquemes</h2>
@@ -14,7 +14,7 @@
 		<p>Esta é a minha página pessoal de apresentação dos conteúdos
 			estudados na Disciplina de Programação I, ano 2023-1
 		</p>
-		<p><img src="/midias/imagens/Zed_2.jpg" title="Zed Dizimador de Galáxias" alt="Zed Dizimador de Galáxias" width="813" height="480"></p>
+		<p><img src="midias/imagens/Zed_2.jpg" title="Zed Dizimador de Galáxias" alt="Zed Dizimador de Galáxias" width="813" height="480"></p>
 		<p>
 			<h2>Aula de tabelas</h2>
 			<p><a href="tabelas/tabelas.html">Ir para a tabela 11</a></p>
