--- a/Listas/lista1.html
+++ b/Listas/lista1.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../CSS/listas.css">
     <title>Aula Lista de Definições</title>
+    <link rel="icon" type="image/x-icon" href="../midias/imagens/icon.ico">
 </head>
 <body>
     <h1>Lista não ordenada</h1>
