--- a/tabelas/tabela2.html
+++ b/tabelas/tabela2.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../CSS/tabela2.css">
     <title>Exemplo 2 Tabela</title>
+    <link rel="icon" type="image/x-icon" href="../midias/imagens/icon.ico">
 </head>
 <body>
     <h2>Tabela de Produtos</h2>
