--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 			<p><a href="Listas/lista1.html">Ir para a Lista</a></p>
 			<h2>ATIVIDADES</h2>
 			<a href="atividades/ariquemes.html">Ir para atividades</a>
+			<h2>Mídias</h2>
+			<a href="midias/midias.html">Ir para mídias</a>
 		</p>
 	</body>
 </html>
