--- a/formularios/formularios2.html
+++ b/formularios/formularios2.html
@@ -9,15 +9,16 @@
 <body>
     <h1>Meu formulário</h1>
     <form>
+        <fieldset style="width: 432px">
         <input type="text" name="nome" placeholder="Digite o seu nome...">
-        <label>
-            Data de Nascimento:
-            <input type="date" name="dtnasc">
-        </label>
+        <label>Data de Nascimento:<input type="date" name="dtnasc"></label>
+        </fieldset>
+        <fieldset style="width: 432px;">
         <label for="nsup">Nível Superior?</label>
         <input type="checkbox" name="nsup" id="nsup">
         <input type="submit" value="Enviar">
         <input type="reset" value="Limpar">
+        </fieldset>
     </form>
 </body>
 </html>
