--- a/formularios/formularios3.html
+++ b/formularios/formularios3.html
@@ -9,30 +9,44 @@
     <body>
         <h2>Segundo Exemplo Formulário</h2>
         <form>
-            <table style="width: 70%; margin: 0 auto;">
-            <tr>
-                <td style="text-align: right;">Nome:</td>
-                <td><input type="text" name="nome" placeholder="Seu nome..."></td>
-            </tr>
-            <tr>
-                <td style="text-align: right;">E-mail:</td>
-                <td><input type="email" name="email" placeholder="Seu e-mail..."></td>
-            </tr>
-            <tr>
-                <td style="text-align: right;">Salário:</td>
-                <td><input type="number" name="salario" step="0.05" min="0" max="100000" placeholder="Seu salário..."></td>
-            </tr>
-            <tr>
-                <td style="text-align: right;">Telefone:</td>
-                <td><input type="tel" name="telefone" placeholder="Seu telefone..."></td>
-            </tr>
-            <tr>
-                <td colspan="2" style="text-align: center;">
-                    <input type="submit" value="Enviar">
-                    <input type="submit" value="Limpar">
-                </td>
-            </tr>
-        </table>
+            <fieldset style="width: 312px; margin: 0 auto;">
+                <table style="margin: 0;">
+                    <tr>
+                        <td style="text-align: right;">Nome:</td>
+                        <td><input type="text" name="nome" placeholder="Seu nome..."></td>
+                    </tr>
+                    <tr>
+                        <td style="text-align: right;">E-mail:</td>
+                        <td><input type="email" name="email" placeholder="Seu e-mail..."></td>
+                    </tr>
+                    <tr>
+                        <td style="text-align: right;">Salário:</td>
+                        <td><input type="number" name="salario" step="0.05" min="0" max="100000" placeholder="Seu salário..."></td>
+                    </tr>
+                    <tr>
+                        <td style="text-align: right;">Telefone:</td>
+                        <td><input type="tel" name="telefone" placeholder="Seu telefone..."></td>
+                    </tr>
+                    <tr>
+                        <td style="text-align: right;">UF de Nascimento:</td>
+                        <td>
+                            <select name="uf">
+                                <option selected disabled>Selecione...</option>
+                                <option>São Paulo</option>
+                                <option>Minas Gerais</option>
+                                <option>Rondônia</option>
+                                <option>Acre</option>
+                            </select>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="2" style="text-align: center;">
+                            <input type="submit" value="Enviar">
+                            <input type="submit" value="Limpar">
+                        </td>
+                    </tr>
+                </table>
+            </fieldset>
         </form>
     </body>
 </html>
