--- a/formularios/formularios3.html
+++ b/formularios/formularios3.html
@@ -7,9 +7,9 @@
         <title>Exemplo formulario 3</title>
     </head>
     <body>
-        <h2>Segundo Exemplo Formulário</h2>
+        <h2 style="text-align: center;">Segundo Exemplo Formulário</h2>
         <form>
-            <fieldset style="width: 312px; margin: 0 auto;">
+            <fieldset style="width: 345px; margin: 0 auto;">
                 <table style="margin: 0;">
                     <tr>
                         <td style="text-align: right;">Nome:</td>
@@ -37,6 +37,14 @@
                                 <option>Rondônia</option>
                                 <option>Acre</option>
                             </select>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="text-align: right;">Hobby:</td>
+                        <td>
+                            <input type="radio" name="hobby" value="Jogos">Jogos
+                            <input type="radio" name="hobby" value="esportes">Esportes
+                            <input type="radio" name="hobby" value="musica">Música
                         </td>
                     </tr>
                     <tr>
