--- a/formularios/formularios3.html
+++ b/formularios/formularios3.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Exemplo formulario 3</title>
+        <title>Exemplo Formulários 3</title>
     </head>
     <body>
         <h2 style="text-align: center;">Segundo Exemplo Formulário</h2>
