--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
 			<h2>Aula de tabelas</h2>
 			<p><a href="tabelas/tabelas.html">Ir paraq a tabela 1</a></p>
 			<p><a href="tabelas/tabela2.html">Ir para a tabela 2</a></p>
-			<h2>Formulário</h2>
-			<p><a href="formularios/formularios.html">Ir para formulário</a></p>
+			<h2>Formulários</h2>
+			<p><a href="formularios/formularios.html">Ir para Formulários 1</a></p>
+			<p><a href="formularios/formularios2.html">Ir para Formulários 2</a></p>
+			<p><a href="formularios/formularios3.html">Ir para Formulários 3</a></p>
 			<h2>Listas de Definições</h2>
 			<p><a href="Listas/lista1.html">Ir para a Lista</a></p>
 			<h2>ATIVIDADES</h2>
