--- a/formularios/formularios3.html
+++ b/formularios/formularios3.html
@@ -42,7 +42,7 @@
                     <tr>
                         <td style="text-align: right;">Hobby:</td>
                         <td>
-                            <input type="radio" name="hobby" value="Jogos">Jogos
+                            <input type="radio" name="hobby" value="jogos">Jogos
                             <input type="radio" name="hobby" value="esportes">Esportes
                             <input type="radio" name="hobby" value="musica">Música
                         </td>
