--- a/atividades/atividade_formulario.html
+++ b/atividades/atividade_formulario.html
@@ -105,7 +105,7 @@
                 </table>
             </fieldset>
             <p style="text-align: center;">Recibo:<input type="checkbox">Emitir em nome da Instituição
-            <input type="button" value="Fazer Inscrição">
+            <p>&nbsp;<input type="button" value="Fazer Inscrição"></p>
             </p>
         </form>
     </fieldset>
