--- a/atividades/atividade_formulario.html
+++ b/atividades/atividade_formulario.html
@@ -7,10 +7,10 @@
         <title>Formulários de Inscrição</title>
     </head>
     <body>
-        <fieldset style="width: 500px; margin: 0 auto;">
-        <h2 style="text-align: center;">Formulário de Inscrição em Evento</h2>
+        <fieldset style="width: 500px; margin: auto;">
+        <h2 style="text-align: left;">Formulário de Inscrição em Evento</h2>
         <form>
-            <fieldset style="width: 500px; margin: 0 auto;">
+            <fieldset style="width: 500px;">
                 <table>
                     <tr>
                         <td style="text-align: right;">Nome Completo:</td>
@@ -45,7 +45,7 @@
         <h2 style="text-align: left;">Informações da Instituição</h2>
         <p style="text-align: left;">Preencha os campos abaixo com as informações da empresa em que trabalha</p>
         <form>
-            <fieldset style="width: 500px; margin: 0 auto;">
+            <fieldset style="width: 500px;">
                 <table>
                     <tr>
                         <td style="text-align: right;">Empresa:</td>
