--- a/atividades/atividade_formulario.html
+++ b/atividades/atividade_formulario.html
@@ -6,10 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Formulários de Inscrição</title>
     </head>
-    <body>
-        <fieldset style="width: 500px; margin: auto;">
+    <body style="font-size: 100%; font-family: sans-serif;">
+        <fieldset style="width: 500px; margin: auto; background-color: aliceblue;">
         <h2 style="text-align: left;">Formulário de Inscrição em Evento</h2>
-        <form>
+        <form style="background-color: aliceblue;">
             <fieldset style="width: 500px;">
                 <table>
                     <tr>
@@ -44,7 +44,7 @@
         </form>
         <h2 style="text-align: left;">Informações da Instituição</h2>
         <p style="text-align: left;">Preencha os campos abaixo com as informações da empresa em que trabalha</p>
-        <form>
+        <form style="background-color: aliceblue;">
             <fieldset style="width: 500px;">
                 <table>
                     <tr>
