--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 			<h2>Listas de Definições</h2>
 			<p><a href="Listas/lista1.html">Ir para a Lista</a></p>
 			<h2>ATIVIDADES</h2>
-			<a href="atividades/ariquemes.html">Ir para atividades</a>
+			<p><a href="atividades/ariquemes.html">Ir para atividade 1</a></p>
+			<p><a href="atividades/atividade_formulario.html">Ir para atividade 2</a></p>
 			<h2>Mídias</h2>
 			<a href="midias/midias.html">Ir para mídias</a>
 		</p>
