--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
 			<h2>Listas de Definições</h2>
 			<p><a href="Listas/lista1.html">Ir para a Lista</a></p>
 			<h2>ATIVIDADES</h2>
-			<p><a href="atividades/ariquemes.html">Ir para atividade 1</a></p>
-			<p><a href="atividades/atividade_formulario.html">Ir para atividade 2</a></p>
+			<p><a href="atividades/ariquemes.html">Ir para atividade Ariquemes</a></p>
+			<p><a href="atividades/atividade_formulario.html">Ir para atividade Formulários</a></p>
+			<p><a href="atividades/aula_css.html">Ir para atividade CSS</a></p>
 			<h2>Mídias</h2>
 			<a href="midias/midias.html">Ir para mídias</a>
 		</p>
