--- a/bootstrap/bootstrap.html
+++ b/bootstrap/bootstrap.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   </head>
-  <body>
+  <body style="background-image: url(../midias/imagens/Zed_2.jpg); background-repeat: no-repeat; background-size: cover;">
     <div class="container p-5 bg-primary text-white text-center">
       <h1>Minha primeira página com Bootstrap</h1>
       <p>Redimensione esta página e veja o efeito responsivo do bootstrap.</p>
