--- a/javascript/exemplo1.html
+++ b/javascript/exemplo1.html
@@ -7,9 +7,13 @@
         <title>Exemplo 1 Javascript</title>
     </head>
     <body>
+        <h1>Testando Javascript</h1>
         <script>
-            alert(1+2+3+'testando'+1+2+3)
-            alert('testando'+1+2+3)
+           // var a = Math.random();
+           // window.alert(a)
+           var seunome = prompt("Informe seu nome: ");
+           //document.write("<h1>Exemplo Javascript</h1>");
+           document.write ("<p>Olá "+seunome+", tudo bem?</p>");
         </script>
     </body>
 </html>
