--- a/javascript/exemplo2.html
+++ b/javascript/exemplo2.html
@@ -7,6 +7,7 @@
         <title>Exemplo 2 Javascript</title>
     </head>
     <body>
+        <p id="result"></p>
         <script src="../javascript/exemplo2.js"></script>
     </body>
 </html>
