--- a/javascript/exercicios/exercicio5.html
+++ b/javascript/exercicios/exercicio5.html
@@ -9,8 +9,9 @@
     <body>
         <h1>5 - Elabore um programa em JavaScript para receber uma quantidade de horas e uma quantidade de minutos e converter apenas em minutos. Mostre o resultado utilizando a função "document.write".</h1>
         <script>
-        var  n1 = parseInt(prompt('Informe o valor em MINUTOS: '));
-        document.write(n1+' minutos, equivalem a '+Math.floor(n1/1440)+' dia(s) , '+Math.floor((n1%1440)/60)+' hora(s), '+n1%60+' minuto(s).');
+        var  hr = parseInt(prompt('Informe o valor em HORAS: '));
+        var  min = parseInt(prompt('Informe o valor em MINUTOS: '));
+        document.write(hr+' horas e '+min+' minutos, equivalem a '+((hr*60)+min)+' minutos.');
         </script>
     </body>
 </html>
