--- a/javascript/formulario2.html
+++ b/javascript/formulario2.html
@@ -39,6 +39,6 @@
             </fieldset>
             <p id="natural"></p>
             <br>Número: <input type="number" min="0" max=100 step="2">
-            <script src="formulario2.js"></script>
+            <script src="../javascript/formulario2.js"></script>
     </body>
 </html>
