--- a/javascript/formulario2.html
+++ b/javascript/formulario2.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Campos de formulário com javascript</title>
+        <title>Campos de formulário com Javascript</title>
     </head>
     <body>
         <input type="text" name="telefone" id="telefone" placeholder="Digite seu telefone" size="50"><br><br>
