--- a/javascript/exercicios/aula_13_06.html
+++ b/javascript/exercicios/aula_13_06.html
@@ -12,6 +12,7 @@
             padding: 20px;
         }
         .question{
+            border-radius: 10px;
             margin-bottom: 10px;
         }
         .incorrect{
