--- a/relogio.html
+++ b/relogio.html
@@ -24,15 +24,15 @@
 		</div>
 		<div class="calendario">
 			<div>
-				<span id="dia"></span>
+				<span id="dia">00</span>
 				<span class="data">Dia</span>
 			</div>
 			<div>
-				<span id="mes"></span>
+				<span id="mes">00</span>
 				<span class="data">Mês</span>
 			</div>
 			<div>
-				<span id="ano"></span>
+				<span id="ano">0000</span>
 				<span class="data">Ano</span>
 			</div>
 		</div>
