--- a/index.html
+++ b/index.html
@@ -1,36 +1,91 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-	<head>
-		<meta charset="UTF-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" type="text/css" href="CSS/estilos.css">
-		<title>Página de teste Josenilton</title>
-		<link rel="icon" type="image/x-icon" href="midias/imagens/icon.ico">
-	</head>
-	<body>
-		<h2>Disciplina de Programação I - IFRO Campus Ariquemes</h2>
-		<p>&nbsp;</p>
-		<p>Esta é a minha página pessoal de apresentação dos conteúdos
-			estudados na Disciplina de Programação I, ano 2023-1
-		</p>
-		<p><img src="midias/imagens/Zed_2.jpg" title="Zed Dizimador de Galáxias" alt="Zed Dizimador de Galáxias" width="813" height="480"></p>
-		<p>
-			<h2>Aula de tabelas</h2>
-			<p><a href="tabelas/tabelas.html">Ir paraq a tabela 1</a></p>
-			<p><a href="tabelas/tabela2.html">Ir para a tabela 2</a></p>
-			<h2>Formulários</h2>
-			<p><a href="formularios/formularios.html">Ir para Formulários 1</a></p>
-			<p><a href="formularios/formularios2.html">Ir para Formulários 2</a></p>
-			<p><a href="formularios/formularios3.html">Ir para Formulários 3</a></p>
-			<h2>Listas de Definições</h2>
-			<p><a href="Listas/lista1.html">Ir para a Lista</a></p>
-			<h2>ATIVIDADES</h2>
-			<p><a href="atividades/ariquemes.html">Ir para atividade Ariquemes</a></p>
-			<p><a href="atividades/atividade_formulario.html">Ir para atividade Formulários</a></p>
-			<p><a href="atividades/aula_css.html">Ir para atividade CSS</a></p>
-			<h2>Mídias</h2>
-			<a href="midias/midias.html">Ir para mídias</a>
-		</p>
-	</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <title>Portifólio</title>
+    </head>
+    <body>
+        <header class="cabecalho">
+            <div class="header">
+                <div class="checkbox-container">
+                    <div class="checkbox-wrapper">
+                        <input type="checkbox" id="toggle">
+                        <label class="checkbox" for="toggle">
+                            <div class="trace"></div>
+                            <div class="trace"></div>
+                            <div class="trace"></div>
+                        </label>
+                        <div class="menu"></div>
+                        <nav class="menu-items">
+                            <ul>
+                                <li>
+                                    <a href="#">Home</a>
+                                </li>
+                                <li>
+                                    <a href="#">Sobre</a>
+                                </li>
+                                <li>
+                                    <a href="#">Projetos</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+
+            <h1>Josenilton F.Z. Júnior</h1>
+            <h2>Cursando ADS - IFRO</h2>
+
+            <div class="redes-sociais">
+                <a href="https://github.com/JJpaxeco" target="_blank" rel="noopener noreferrer">GitHub</a>
+                <a href="https://www.instagram.com/jjpaxeco/" target="_blank" rel="noopener noreferrer">Instagram</a>
+            </div>
+        </header>
+
+        <main class="principal">
+            <div class="card-container">
+                <div class="card">
+                    <div class="card-wrapper">
+                        <h2>Projeto 1</h2>
+                        <p>Venha ver!</p>
+                    </div>
+                </div>
+                <div class="card-text">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit ut adipisci corrupti quis blanditiis quo, libero excepturi nostrum facere, sint facilis ea dolores officia error eum! Quo dolore tempora aspernatur!
+                </div>
+
+            </div>
+            <div class="card-container">
+                <div class="card">
+                    <div class="card-wrapper">
+                        <h2>Projeto 2</h2>
+                        <p>Venha ver!</p>
+                    </div>
+                </div>
+                <div class="card-text">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit ut adipisci corrupti quis blanditiis quo, libero excepturi nostrum facere, sint facilis ea dolores officia error eum! Quo dolore tempora aspernatur!
+                </div>
+                
+            </div>
+            <div class="card-container">
+                <div class="card">
+                    <div class="card-wrapper">
+                        <h2>Projeto 3</h2>
+                        <p>Venha ver!</p>
+                    </div>
+                </div>
+                <div class="card-text">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit ut adipisci corrupti quis blanditiis quo, libero excepturi nostrum facere, sint facilis ea dolores officia error eum! Quo dolore tempora aspernatur!
+                </div>
+                
+            </div>
+        </main>
+
+        <footer class="rodape">
+            Feito por Josenilton F. Z. Júnior
+        </footer>
+
+    </body>
 </html>
