--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
                         <nav class="menu-items">
                             <ul>
                                 <li>
-                                    <a href="#">Home</a>
+                                    <a href="relogio.html">Relógio</a>
                                 </li>
                                 <li>
                                     <a href="#">Sobre</a>
                                 </li>
                                 <li>
-                                    <a href="#">Projetos</a>
+                                    <a href="projetos.html">Projetos</a>
                                 </li>
                             </ul>
                         </nav>
@@ -48,24 +48,24 @@
             <div class="card-container">
                 <div class="card">
                     <div class="card-wrapper">
-                        <h2>Projeto 1</h2>
+                        <h2>JavaScript</h2>
                         <p>Venha ver!</p>
                     </div>
                 </div>
                 <div class="card-text">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit ut adipisci corrupti quis blanditiis quo, libero excepturi nostrum facere, sint facilis ea dolores officia error eum! Quo dolore tempora aspernatur!
+                    Alguns exercícios desenvolvidos durante as aulas em JavaScript!
                 </div>
 
             </div>
             <div class="card-container">
                 <div class="card">
                     <div class="card-wrapper">
-                        <h2>Projeto 2</h2>
+                        <h2>Forms</h2>
                         <p>Venha ver!</p>
                     </div>
                 </div>
                 <div class="card-text">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit ut adipisci corrupti quis blanditiis quo, libero excepturi nostrum facere, sint facilis ea dolores officia error eum! Quo dolore tempora aspernatur!
+                    Exercícios de Formulários com CSS e HTML
                 </div>
                 
             </div>
