--- a/bootstrap/bootstrap.html
+++ b/bootstrap/bootstrap.html
@@ -38,5 +38,6 @@
         </form>
       </div>
     </div>
+    <button class="button2" ><strong><a href="../projetos.html">Voltar</a></strong></button>
   </body>
 </html>
