--- a/javascript/exemplo1.html
+++ b/javascript/exemplo1.html
@@ -15,5 +15,6 @@
            //document.write("<h1>Exemplo Javascript</h1>");
            document.write ("<p>Olá "+seunome+", tudo bem?</p>");
         </script>
+        <button class="button2" ><strong><a href="../projetos.html">Voltar</a></strong></button>
     </body>
 </html>
