--- a/javascript/exemplo2.html
+++ b/javascript/exemplo2.html
@@ -9,5 +9,6 @@
     <body>
         <p id="result"></p>
         <script src="../javascript/exemplo2.js"></script>
+        <button class="button2" ><strong><a href="../projetos.html">Voltar</a></strong></button>
     </body>
 </html>
