--- a/javascript/exemplo3.html
+++ b/javascript/exemplo3.html
@@ -77,5 +77,6 @@
             multiplos.innerHTML += lista;
         }
         </script>
+        <button class="button2" ><strong><a href="../projetos.html">Voltar</a></strong></button>
     </body>
 </html>
