--- a/projetos.html
+++ b/projetos.html
@@ -9,12 +9,41 @@
 		<link rel="icon" type="image/x-icon" href="midias/imagens/icon.ico">
 	</head>
 	<body>
+		<header class="cabecalho">
+            <div class="header">
+                <div class="checkbox-container">
+                    <div class="checkbox-wrapper">
+                        <input type="checkbox" id="toggle">
+                        <label class="checkbox" for="toggle">
+                            <div class="trace"></div>
+                            <div class="trace"></div>
+                            <div class="trace"></div>
+                        </label>
+                        <div class="menu"></div>
+                        <nav class="menu-items">
+                            <ul>
+                                <li>
+                                    <a href="index.html">HOME</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </header>
 		<h2>Disciplina de Programação I - IFRO Campus Ariquemes</h2>
 		<p>&nbsp;</p>
 		<p>Esta é a minha página pessoal de apresentação dos conteúdos
 			estudados na Disciplina de Programação I, ano 2023-1
 		</p>
 		<p>
+			<h2>Aula de JavaScript</h2>
+			<p><a href="javascript/exemplo1.html">Ir para exercicio 1</a></p>
+			<p><a href="javascript/exemplo2.html">Ir para exercicio 2</a></p>
+			<p><a href="javascript/exemplo3.html">Ir para exercicio 3</a></p>
+			<p><a href="javascript/formulario2.html">Ir para exercicio 4</a></p>
+			<h2>BootStrap</h2>
+			<p><a href="bootstrap/bootstrap.html">Ir para exercicio</a></p>
 			<h2>Aula de tabelas</h2>
 			<p><a href="tabelas/tabelas.html">Ir paraq a tabela 1</a></p>
 			<p><a href="tabelas/tabela2.html">Ir para a tabela 2</a></p>
@@ -31,5 +60,6 @@
 			<h2>Mídias</h2>
 			<a href="midias/midias.html">Ir para mídias</a>
 		</p>
+		<button class="button2" ><strong><a href="index.html">Voltar</a></strong></button>
 	</body>
 </html>
