--- a/Listas/lista1.html
+++ b/Listas/lista1.html
@@ -44,6 +44,6 @@
             <dd>Anti ácido</dd>
     </dl>
     <p>&nbsp;</p>
-    <p><form><button class="button2" type="submit"><strong><a href="../index.html">Voltar</a></strong></button></form></p>
+    <p><form><button class="button2" type="submit"><strong><a href="../projetos.html">Voltar</a></strong></button></form></p>
 </body>
 </html>
