--- a/atividades/atividade_formulario.html
+++ b/atividades/atividade_formulario.html
@@ -109,6 +109,6 @@
             </p>
         </form>
     </fieldset>
-    <a href="../index.html">Voltar para a página principal</a>
+    <a href="../projetos.html">Voltar para a página principal</a>
     </body>
 </html>
