--- a/formularios/formularios.html
+++ b/formularios/formularios.html
@@ -83,10 +83,8 @@
             </div>
 
             <button class="button" type="submit"><strong>Concluído</strong></button>
-            <form action="../index.html">
-                <input type="submit" value="Voltar" />
-            </form>
-           <button class="button2" ><strong><a href="../index.html">Voltar</a></strong></button>
+        
+           <button class="button2" ><strong><a href="../projetos.html">Voltar</a></strong></button>
         </form>
     </body>
 </html>
