--- a/formularios/formularios2.html
+++ b/formularios/formularios2.html
@@ -20,6 +20,6 @@
         <input type="reset" value="Limpar">
         </fieldset>
     </form>
-    <form><button class="button2" type="submit"><strong><a href="../index.html">Voltar</a></strong></button></form>
+    <form><button class="button2" type="submit"><strong><a href="../projetos.html">Voltar</a></strong></button></form>
 </body>
 </html>
