--- a/formularios/formularios3.html
+++ b/formularios/formularios3.html
@@ -56,6 +56,6 @@
                 </table>
             </fieldset>
         </form>
-    <form><button class="button2" type="submit"><strong><a href="../index.html">Voltar</a></strong></button></form>
+    <form><button class="button2" type="submit"><strong><a href="../projetos.html">Voltar</a></strong></button></form>
     </body>
 </html>
