--- a/javascript/formulario2.html
+++ b/javascript/formulario2.html
@@ -40,5 +40,6 @@
             <p id="natural"></p>
             <br>Número: <input type="number" min="0" max=100 step="2">
             <script src="../javascript/formulario2.js"></script>
+            <button class="button2" ><strong><a href="../projetos.html">Voltar</a></strong></button>
     </body>
 </html>
