--- a/midias/midias.html
+++ b/midias/midias.html
@@ -19,6 +19,6 @@
         <video controls autoplay muted loop>
             <source src="../midias/videos/madara.mp4" type="video/mp4">
         </video>
-        <form><button class="button2" type="submit"><strong><a href="../index.html">Voltar</a></strong></button></form>
+        <form><button class="button2" type="submit"><strong><a href="../projetos.html">Voltar</a></strong></button></form>
     </body>
 </html>
