--- a/relogio.html
+++ b/relogio.html
@@ -8,6 +8,28 @@
 		<title>Relógio Digital</title>
 	</head>
 	<body>
+		<header class="cabecalho">
+            <div class="header">
+                <div class="checkbox-container">
+                    <div class="checkbox-wrapper">
+                        <input type="checkbox" id="toggle">
+                        <label class="checkbox" for="toggle">
+                            <div class="trace"></div>
+                            <div class="trace"></div>
+                            <div class="trace"></div>
+                        </label>
+                        <div class="menu"></div>
+                        <nav class="menu-items">
+                            <ul>
+                                <li>
+                                    <a href="index.html">HOME</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </header>
 		<div class="relogio">
 			<div>
 				<span id="horas">00</span>
