--- a/tabelas/tabela2.html
+++ b/tabelas/tabela2.html
@@ -45,6 +45,6 @@
             </tr>
         </tfoot>
     </table>
-    <form><button class="button2" type="submit"><strong><a href="../index.html">Voltar</a></strong></button></form>
+    <form><button class="button2" type="submit"><strong><a href="../projetos.html">Voltar</a></strong></button></form>
 </body>
 </html>
