--- a/tabelas/tabelas.html
+++ b/tabelas/tabelas.html
@@ -20,6 +20,6 @@
                 <td><img src="../midias/imagens/Zed_2.jpg" alt="zed" width="300" height="200"> </td></tr>
         </tbody>
     </table>
-    <form><button class="button2" type="submit"><strong><a href="../index.html">Voltar</a></strong></button></form>
+    <form><button class="button2" type="submit"><strong><a href="../projetos.html">Voltar</a></strong></button></form>
 </body>
 </html>
