--- a/index.html
+++ b/index.html
@@ -24,9 +24,6 @@
                                     <a href="relogio.html">Relógio</a>
                                 </li>
                                 <li>
-                                    <a href="#">Sobre</a>
-                                </li>
-                                <li>
                                     <a href="projetos.html">Projetos</a>
                                 </li>
                             </ul>
@@ -45,7 +42,35 @@
         </header>
         
         <footer class="rodape">
-            Feito por Josenilton F. Z. Júnior
+            <div class="relogio">
+                <div>
+                    <span id="horas">00</span>
+                    <span class="tempo">Horas</span>
+                </div>
+                <div>
+                    <span id="minutos">00</span>
+                    <span class="tempo">Minutos</span>
+                </div>
+                <div>
+                    <span id="segundos">00</span>
+                    <span class="tempo">Segundos</span>
+                </div>
+            </div>
+            <div class="calendario">
+                <div>
+                    <span id="dia">00</span>
+                    <span class="data">Dia</span>
+                </div>
+                <div>
+                    <span id="mes">00</span>
+                    <span class="data">Mês</span>
+                </div>
+                <div>
+                    <span id="ano">0000</span>
+                    <span class="data">Ano</span>
+                </div>
+            </div>
+            <script src="assets_relogio/JS/script_relogio.js"></script>
         </footer>
 
     </body>
